refactor: moving responses and password to utils
